added assignment 2 and moved all run scripts and docs to their own directory